# devops_final_backend

./: .buildinfo  .env.example  .env.keycloak  .env.keycloak.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.html  README.md  compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  schemathesis.toml  search.html  searchindex.js  usefull_commands.html  usefull_commands.md  usefull_commands.sh
.doctrees/: README.doctree  environment.pickle  index.doctree  usefull_commands.doctree
.doctrees/api/: devops_final_backend.api.doctree  devops_final_backend.api.v_next.doctree  devops_final_backend.doctree  devops_final_backend.services.auth.doctree  devops_final_backend.services.doctree  devops_final_backend.services.llm_generator.doctree  devops_final_backend.tests.doctree  devops_final_backend.tests.extra.doctree
.github/: dependabot.yaml
.github/workflows/: cd.yaml  ci.yaml  docker.yaml  docs.yaml
_sources/: README.rst.txt  index.rst.txt
_sources/api/: devops_final_backend.api.rst.txt  devops_final_backend.rst.txt  devops_final_backend.services.llm_generator.rst.txt  devops_final_backend.tests.extra.rst.txt
_static/: custom.css
api/: devops_final_backend.api.html  devops_final_backend.api.v_next.html  devops_final_backend.html  devops_final_backend.services.auth.html  devops_final_backend.services.html  devops_final_backend.services.llm_generator.html  devops_final_backend.tests.extra.html  devops_final_backend.tests.html
docs/source/: README.rst  conf.py  generate_api_docs.py  index.rst  usefull_commands.rst
docs/source/_static/: custom.css
docs/source/api/: devops_final_backend.api.rst  devops_final_backend.api.v_next.rst  devops_final_backend.rst  devops_final_backend.services.auth.rst  devops_final_backend.services.rst  devops_final_backend.tests.rst  modules.rst
scripts/: build_docs.sh  clear_caches.sh  run_extra_tests.sh
src/devops_final_backend/: __init__.py  settings.py
src/devops_final_backend/api/: __init__.py  errors.py
src/devops_final_backend/api/vNext/: __init__.py  models.py
src/devops_final_backend/api/v_next/: __init__.py  models.py
src/devops_final_backend/services/: __init__.py
src/devops_final_backend/services/auth/: __init__.py  dependencies.py
src/devops_final_backend/services/llm_generator/: __init__.py  abstract_generator.py  compose_generator.py  errors.py  models.py
src/devops_final_backend/tests/: __init__.py  test_01_generator_compose.py  test_02_auth_keycloak.py  test_0_schemathesis.py  test_10_schemathesis.py
src/devops_final_backend/tests/extra/: __init__.py  run_auth_keycloak.py  run_schemathesis.py
