[project]
name = "devops-final-backend"
version = "0.4.0"
description = "FastAPI Backend for the DevOps Final Project"
readme = "README.md"
authors = [
    { name = "Tudor Huza", email = "huzatudor@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
    "langchain==0.3.27",
    "langchain-ollama>=0.3.10",
    "langchain-community>=0.3.30",
    "python-keycloak>=5.8.1",
]

[project.scripts]
devops-final-backend = "devops_final_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
fix = true
lint.extend-select = ["I"]

[tool.pylint]
ignore = ["venv", ".env", "build", "dist"]
load-plugins = ["pylint.extensions.docparams"]
disable = []
output-format = "colorized"
good-names = ["i", "j", "k", "ex", "Run", "_"]
max-line-length = 120
extension-pkg-whitelist = ["pydantic"]
ignored-modules = ["typing_extensions"]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pylint>=4.0.0",
    "ruff>=0.14.0",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
]
